# Multi_Orchestrator_MCP

./: .dockerignore  .env.backup  .env.example  .env.production.template  .env.simple  .gitignore  CEQUENCE_DEPLOYMENT_GUIDE.md  CLEANUP-COMPLETE.md  COMPETITION_SUBMISSION.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DESCOPE_CONFIGURATION_GUIDE.md  Dockerfile  Dockerfile.production  FINAL_COMPLETION_GUIDE.md  PHASE-3-CEQUENCE-COMPLETE.md  PHASE-7-SELF-HEALING-COMPLETE.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY-MIGRATION-COMPLETE.md  REVOLUTIONARY_DEPLOYMENT_GUIDE.md  SMITHERY_DEPLOYMENT_READY.md  demo.py  demo_access_key_auth.py  deploy.sh  descope_env_config.env  descope_scopes_config.json  diagnose.py  docker-test.sh  final_legendary_test.py  http_server.py  k8s-deployment.yaml  mcp_server.py  oauth_redirect_config.json  openapi.json  openapi.yaml  plan.md  pyproject.toml  pyproject_poetry.toml  (+21 more)
.github/workflows/: deploy.yml
Multi_Orchestrator_MCP/: .env.production.template  PHASE-1-COMPLETE.md  Procfile  docker-compose.yml  runtime.txt
Multi_Orchestrator_MCP/planning/: 00-project-roadmap.md  04-cequence-gateway.md  07-self-healing-loop.md
Multi_Orchestrator_MCP/scripts/: deploy.ps1
Multi_Orchestrator_MCP/tests/: conftest.py
api/: cequence_deployment.yaml  openapi.json  openapi_legendary.yaml
archive/: OAUTH_FIX_COMPLETE.md  OAUTH_TROUBLESHOOTING_GUIDE.md  main.py  main_fastapi.py
config/: env.template  mcp.json.template
docs/: CEQUENCE-DEPLOYMENT-GUIDE.md  DEPLOYMENT_CHECKLIST.md  DESCOPE_CONFIGURATION.md  IMPLEMENTATION_PRIORITY_MATRIX.md  NEXT_LEVEL_UPGRADE_PLAN.md  REAL_WORLD_TESTING_RESULTS.md  SECURITY_AUDIT_FIXES.md  TECHNICAL_SPECIFICATIONS.md  cursor-mcp-setup.md
docs/archive/: .env.production.template  .env.template  DEPLOYMENT-GUIDE.md  DESCOPE-REDIRECT-URI-UPDATE.md  MIGRATION-SUMMARY.md  README_backup.md  README_old.md  VERCEL-DEPLOYMENT-GUIDE.md  cequence-integration.md  machine_token.json  server.py
docs/competition/: COMPETITION_SUBMISSION.md  COMPETITION_SUMMARY.md  COMPETITION_WINNING_STRATEGY.md  COMPLETION_GUIDE.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  SUBMISSION_CHECKLIST.md
docs/deployment/: DEPLOYMENT_COMPLETE.md  DESCOPE_CONFIGURATION_GUIDE.md
docs/from main/: PROFESSIONAL_DEPLOYMENT_COMPLETE.md
examples/: mcp.json  start_auth.bat  start_auth.sh
planning/: 03-descope-authentication.md  09-demo-preparation.md
scripts/: README.md  configure_descope.py  create_access_key.py  create_machine_token.py  debug_config.py  get_jwt_token.py  mcp_client_with_auth.py  register_mcp_client.py  test-deployment-simple.ps1  test_auth_flow.py  test_management_key.py  test_mcp_tools.py  test_oauth_flow.py  test_production_validation.py  test_scope_enforcement.py  validate-vercel-deployment.ps1  validate_auth.py
scripts/testing/: test_cequence_deployment.py  test_descope_config.py  test_middleware_integration.py  validate_auth.py  validate_cequence_deployment.py  validate_deployment.py
smithery/: .env.template  .gitignore  COMPETITION_SUMMARY.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  pyproject.toml
smithery/src/multi_orchestrator_mcp/: __init__.py  server.py
smithery/tests/: mcp_protocol_validation.py  test_mcp_server.py
src/: main.py
src/agents/: architect_agent.py  backend_agent.py  base_agent.py  devops_agent.py  frontend_agent.py  (+7 more)
static/: cequence_dashboard.html  demo_dashboard.html
tests/: conftest.py  run_healing_tests.py  run_tests.py  test_basic_tools.py  test_cequence_integration.py  test_descope_auth.py  test_healing_mcp_tools.py  test_healing_system.py  test_intelligent_routing.py  test_mcp_resources_integration.py  test_mcp_server.py  test_mcp_tools_integration.py  test_report.md  test_tools.py  validate_cleanup.py
testsnew and openapi backup/: openapi_fixed.yaml  test_auth_fix.py  test_mcp_full.py  test_mcp_init.py  test_simple_client.py
(+47 files in other folders)
