[project]
name = "multi-orchestrator-mcp"
version = "2.0.0"
description = "Multi-Agent Orchestrator MCP Server with Descope Auth, Cequence Analytics, and Self-Healing"
authors = [
    {name = "Competition Team", email = "team@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "smithery",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "pyjwt[crypto]>=2.10.1",
    "structlog>=25.4.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.3",
    "anthropic>=0.65.0",
    "openai>=1.104.2",
    "redis>=6.4.0",
    "cryptography>=42.0.8",
    "python-json-logger>=3.3.0",
    "networkx>=3.3",
    "asyncio-throttle>=1.0.2",
    "jsonschema>=4.21.1",
    "jinja2>=3.1.4",
    "plotly>=5.18.0",
    "matplotlib>=3.8.3",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "psutil>=5.9.8",
    "docker>=7.0.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.42",
    "azure-identity>=1.15.0",
    "google-cloud-compute>=1.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "respx>=0.22.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Keep your existing tool configurations
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]
asyncio_mode = "auto"