[project]
name = "multi-orchestrator-mcp"
version = "2.0.0"
description = "Multi-Agent Orchestrator MCP Server with Descope Auth, Cequence Analytics, and Self-Healing"
authors = [
    {name = "Competition Team", email = "team@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "smithery",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1", 
    "python-jose[cryptography]>=3.5.0",
    "pyjwt[crypto]>=2.10.1",
    "structlog>=25.4.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "anthropic>=0.65.0",
    "openai>=1.104.2",
    "redis>=6.4.0",
    "cryptography>=42.0.8",
    "python-json-logger>=3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "respx>=0.22.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort] 
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"